--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rudra - AI Voice Assistant</title>
+    <title>NExa - AI Voice Assistant</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Rudra</h1>
+            <h1>NExa</h1>
             <p class="subtitle">AI Voice Assistant</p>
         </header>
 
@@ -51,12 +51,12 @@
                 <div class="input-display">
                     <h3>Voice Input</h3>
                     <div class="display-content" id="voice-input">
-                        Say "Rudra" followed by your command...
+                        Say "NExa" followed by your command...
                     </div>
                 </div>
 
                 <div class="output-display">
-                    <h3>Rudra's Response</h3>
+                    <h3>NExa's Response</h3>
                     <div class="display-content" id="assistant-response">
                         Waiting for your command...
                     </div>
@@ -80,48 +80,48 @@
                     <div class="command-category">
                         <h4>⏰ Time & Date</h4>
                         <ul>
-                            <li>"Rudra, what time is it?"</li>
-                            <li>"Rudra, what's today's date?"</li>
+                            <li>"NExa, what time is it?"</li>
+                            <li>"NExa, what's today's date?"</li>
                         </ul>
                     </div>
                     <div class="command-category">
                         <h4>🌤️ Weather</h4>
                         <ul>
-                            <li>"Rudra, what's the weather?"</li>
-                            <li>"Rudra, what's the temperature?"</li>
+                            <li>"NExa, what's the weather?"</li>
+                            <li>"NExa, what's the temperature?"</li>
                         </ul>
                     </div>
                     <div class="command-category">
                         <h4>🎵 Music Control</h4>
                         <ul>
-                            <li>"Rudra, play music"</li>
-                            <li>"Rudra, volume up"</li>
-                            <li>"Rudra, pause music"</li>
+                            <li>"NExa, play music"</li>
+                            <li>"NExa, volume up"</li>
+                            <li>"NExa, pause music"</li>
                         </ul>
                     </div>
                     <div class="command-category">
                         <h4>🏠 Smart Home</h4>
                         <ul>
-                            <li>"Rudra, turn on the lights"</li>
-                            <li>"Rudra, lock the door"</li>
-                            <li>"Rudra, check security"</li>
+                            <li>"NExa, turn on the lights"</li>
+                            <li>"NExa, lock the door"</li>
+                            <li>"NExa, check security"</li>
                         </ul>
                     </div>
                     <div class="command-category">
                         <h4>📺 Entertainment</h4>
                         <ul>
-                            <li>"Rudra, open Netflix"</li>
-                            <li>"Rudra, open Spotify"</li>
-                            <li>"Rudra, play Naatu Naatu on YouTube"</li>
-                            <li>"Rudra, connect TV"</li>
+                            <li>"NExa, open Netflix"</li>
+                            <li>"NExa, open Spotify"</li>
+                            <li>"NExa, play Naatu Naatu on YouTube"</li>
+                            <li>"NExa, connect TV"</li>
                         </ul>
                     </div>
                     <div class="command-category">
                         <h4>🧮 Calculator & News</h4>
                         <ul>
-                            <li>"Rudra, calculate 15 plus 25"</li>
-                            <li>"Rudra, what's the news?"</li>
-                            <li>"Rudra, what is artificial intelligence?"</li>
+                            <li>"NExa, calculate 15 plus 25"</li>
+                            <li>"NExa, what's the news?"</li>
+                            <li>"NExa, what is artificial intelligence?"</li>
                         </ul>
                     </div>
                 </div>
